openshift/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fkm
  labels:
    app.kubernetes.io/part-of: feast-kfp-mlflow
